<resources>
    <string name="app_name">まわりみち兼六園</string>
    <string name="title_home">Home</string>
    <string name="title_achieve">Achieve</string>
    <string name="title_notifications">Information</string>
    <string name="title_select_map">観光地選択</string>
    <string name="title_marker_detail_fragment">詳細情報</string>
    <string name="select_map">観光地を選択してください!</string>

    <string name="checkpoint">チェックポイントの数</string>
    <string name="hosuu">歩数</string>
    <string name="visitCount">訪問回数</string>
    <string name="badge">バッジ</string>
    <string name="tmp">text</string>
    <string name="detail">詳細を表示</string>
    <string name="text">text</string>
    <string name="back">戻る</string>
    <string name="close">閉じる</string>
</resources>