<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_select_map">

    <fragment
        android:id="@+id/navigation_select_map"
        android:name="com.example.kenroku_app.view.fragments.selectMap.SelectMapFragment"
        android:label="@string/title_select_map"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_select_map_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kenroku_app.view.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="content"
            app:argType="string"/>
        <action
            android:id="@+id/action_navigation_home_to_markerDetailFragment"
            app:destination="@id/navigation_marker_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_achieve"
        android:name="com.example.kenroku_app.view.fragments.achieve.AchieveFragment"
        android:label="@string/title_achieve"
        tools:layout="@layout/fragment_achieve" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.kenroku_app.view.fragments.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_marker_detail"
        android:name="com.example.kenroku_app.view.fragments.home.MarkerDetailFragment"
        android:label="@string/title_marker_detail_fragment"
        tools:layout="@layout/fragment_marker_detail"/>
</navigation>