<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.achieve.AchieveFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosuu"
                android:padding="8dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/number_of_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tmp"
                android:textSize="28sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkpoint"
                android:padding="8dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/number_of_checkpoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tmp"
                android:textSize="28sp"
                android:gravity="center_horizontal"/>
            <FrameLayout
                android:id="@+id/fragment_container_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visitCount"
                android:padding="8dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/number_of_visits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tmp"
                android:textSize="28sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/badge"
                android:padding="8dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="28sp"/>

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>